ui: replaced the Youtube embedding with Supademo embedding and increased the size for larger screens.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/lovable-uploads/575cdd47-fe7f-4ace-ae9f-6b3862bed095.png" type="image/png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wildest AI - The New Agile for AI Code</title>
-    <meta name="description" content="Transform your development process with intelligent automation and cutting-edge AI assistance. The future of coding is here." />
-    <meta name="author" content="Wildest AI" />
 
-    <meta property="og:title" content="Wildest AI - The New Agile for AI Code" />
-    <meta property="og:description" content="Transform your development process with intelligent automation and cutting-edge AI assistance. The future of coding is here." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/lovable-uploads/575cdd47-fe7f-4ace-ae9f-6b3862bed095.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wildest AI - The New Agile for AI Code</title>
+  <meta name="description"
+    content="Transform your development process with intelligent automation and cutting-edge AI assistance. The future of coding is here." />
+  <meta name="author" content="Wildest AI" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@wildest_ai" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Wildest AI - The New Agile for AI Code" />
+  <meta property="og:description"
+    content="Transform your development process with intelligent automation and cutting-edge AI assistance. The future of coding is here." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@wildest_ai" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
